--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "1.0.0",
   "source": "./index.html",
   "type": "module",
-  "name": "anima-project",
+  "name": "E-ALS",
   "description": "E-ALS",
   "scripts": {
     "dev": "vite",
